# Todo-App-with-Reactjs-Rust

./: README.md
my-app/: package-lock.json
my-app/src/: App.css  App.js  Data.js  form.css  form.js
simple_api_rocket/: Cargo.toml  todos.json
simple_api_rocket/src/: main.rs  model.rs
todo-app/: package-lock.json  package.json
todo-app/public/: index.html
todo-app/src/: App.css  App.js
todo-app/src/components/: LightDark.js
todo_simple_api_rocket/: Cargo.toml
todo_simple_api_rocket/src/: handler.rs  main.rs
